modules/cli/src/test/resources/good/misc/globals/grecursion/Recursion11.scr
module parsing.globals.grecursion.Recursion11;


global protocol Recursion11(role A, role B)
{
	rec X
	{
		l1() from A to B;
	}
	rec Y
	{
		l2() from B to A;
		continue Y;
		//continue X;  // Uncomment bad, even if above line is commented
	}
}

